new trips images

--- a/new-site/events/tahiti-tofino/index.html
+++ b/new-site/events/tahiti-tofino/index.html
@@ -29,6 +29,116 @@ $(document).on("ready", function() {
   });
 });
 
+var people = [
+    {
+        "image": "tahiti-01.jpg",
+        "name": "Salty Wings",
+        "handle": "saltywings"
+    },
+    {
+        "image": "tahiti-02.jpg",
+        "name": "Salty Wings",
+        "handle": "saltywings"
+    },
+    {
+        "image": "tahiti-03.jpg",
+        "name": "Salty Wings",
+        "handle": "saltywings"
+    },
+    {
+        "image": "tahiti-04.jpg",
+        "name": "Ja Soon Kim",
+        "handle": "omjsk"
+    },
+    {
+        "image": "tahiti-05.jpg",
+        "name": "Tyson Wheatley",
+        "handle": "twheat"
+    },
+   {
+       "image": "tahiti-06.jpg",
+       "name": "Emily Nathan",
+       "handle": "ernathan"
+   },
+   {
+       "image": "tahiti-07.jpg",
+       "name": "Dan Tom",
+       "handle": "dantom"
+   },
+   {
+       "image": "tahiti-08.jpg",
+       "name": "Emily Nathan",
+       "handle": "ernathan"
+   },
+   {
+       "image": "tahiti-09.jpg",
+       "name": "Ja Soon Kim",
+       "handle": "omjsk"
+   },
+   {
+       "image": "tahiti-10.jpg",
+       "name": "Tyson Wheatley",
+       "handle": "twheat"
+   },
+   {
+       "image": "tahiti-11.jpg",
+       "name": "Dan Tom",
+       "handle": "dantom"
+   },
+   {
+       "image": "tahiti-12.jpg",
+       "name": "Tyson Wheatley",
+       "handle": "twheat"
+   },
+   {
+       "image": "tahiti-13.jpg",
+       "name": "Tasha van Zandt",
+       "handle": "tashavanzandt"
+   },
+   {
+       "image": "tahiti-14.jpg",
+       "name": "Shelly Strazis",
+       "handle": "shellystrazis"
+   },
+   {
+       "image": "tahiti-15.jpg",
+       "name": "Emily Nathan",
+       "handle": "ernathan"
+   },
+   {
+       "image": "tahiti-16.jpg",
+       "name": "Emily Nathan",
+       "handle": "ernathan"
+   },
+   {
+       "image": "tahiti-17.jpg",
+       "name": "Tyson Wheatley",
+       "handle": "twheat"
+   },
+   {
+       "image": "tahiti-18.jpg",
+       "name": "Shelly Strazis",
+       "handle": "shellystrazis"
+   },
+   {
+       "image": "tahiti-19.jpg",
+       "name": "Dan Tom",
+       "handle": "dantom"
+   },
+   {
+       "image": "tahiti-20.jpg",
+       "name": "Emily Nathan",
+       "handle": "ernathan"
+   },
+   {
+       "image": "tahiti-21.jpg",
+       "name": "Salty Wings",
+       "handle": "saltywings"
+   }
+   ]
+
+
+
 </script>
 
 <!-- <div class="header-container">
