--- a/new-site/js/Tiny Atlas Quarterly _ TAQ Trips.htm
+++ b/new-site/js/Tiny Atlas Quarterly _ TAQ Trips.htm
@@ -230,17 +230,21 @@
             </p>
             <p class="info">
                 <span class="label">Guides:</span><br> Tom Werney<br> Emily Nathan<br> Laura Rubin<br>
-                <span class="label"><a href="http://earthmissions.com/product/taq-allswell-tahiti/">Book this trip</a></span>
+
             </p>
         </div>
         <div class="main-content">
-            <p>On Tahiti and Mo'orea Island we will experience two gorgeous islands over six nights and seven days. On Tahiti we will sleep in homestay bungalows with delicious meals prepared daily by our hosts. In Mo'orea we will stay in the garden style
-                bungalows right on the ocean. The islands, deep in the pacific, offer tropical landscapes, a reef accessible in minutes that’s a mecca for underwater wildlife just waiting to be photographed, and equally exciting surf in each spot.</p>
-            <p>We will start on Tahiti Island, then hop over to Mo'orea with Earth Missions founder Tom Werney, and a Tahitian photographer as our water guides. Also at your side will be travel photographer and founder of Tiny Atlas Quarterly, Emily Nathan,
-                and surf-adventurer and creator of AllSwell notebooks, Laura Rubin.</p>
-            <p>These creative professionals will be there to provide surf, creative and photography guidance for the whole group or via one-to-one sessions for those who prefer private tutorials.</p>
-            <p>Not a surfer or experienced photographer yet? No worries! All you need is a love for the ocean and the arts, and an open mind.</p>
-            <p>Daily programming will include surf, yoga, creativity and photography training with full freedom to explore the coast on your own timeline if you prefer.</p>
+            <p>The islands, deep in the Pacific, offer tropical landscapes, a reef accessibly in minutes, world class surf and surf photography, wildlife filled turquoise lagoons, and the warmest Tahitian hospitality.</p>
+            <h3>La Orana</h3>
+            <p>From March 20-26 Tiny Atlas Quarterly and our trip partners Earth Missions (http://earthmissions.com) x AllSwell Creative (https://allswellcreative.com) hosted an epic island-hopping adventure on Mo’orea and Tahiti in collaboration with Adobe Stock (https://stock.adobe.com) who collaborated with Tiny Atlas and the photographers below to produce best-in-class photography.</p>
+            <h3>Itinerary</h3>
+            <p>After landing in Pape’ete, we traveled by ferry to the island of Mo'orea, staying right on the lagoon in over-water bungalows. Days in Mo’orea were measured in sunrises, mountainous photo hikes, fresh cooked family meals, drone flights, boat rides, sting rays swims and lemon shark underwater encounters. Departing Mo’orea we travelled to Tahiti, staying just past  “the end of the road” in Teahupo’o in local homes and bungalows accessible only by driving a pickup truck through a river or via a foot bridge and across a lush local neighborhood. In Teahupo’o our crew experienced this gorgeous land mostly from the water via daily boat adventures with our local guide Milton: capturing pro surfers on one of the most epic waves in the world, swimming in the rain in waterfall fed fresh rivers and while sailing out to remote Tetiaroa atoll.</p>
+
+            <h3>Creative Exploration</h3>
+            <p>Throughout the trip our group of photographers/influencers explored Adobe Stock’s portfolio of tools (@adobestock, @adobecreativecloud) that helps emerging photographers connect their work with a larger audience. At Tiny Atlas we hear so often from photographers that they are shooting amazing work and trying to figure out how to translate that into client relationships, i.e. getting paid for their creativity. Becoming an Adobe Stock contributor represents one opportunity to do just that.</p>
+
+            <h3>Imagery</h3>
+            <p>The Tiny Atlas Tahiti collection (link TK) for Adobe Premium Stock  features the incredible results from our adventure.</p>
         </div>
     </div>
     <div id="tahiti-grid" class="grid-wrapper">
