--- a/new-site/events/tahiti-tofino/index.html
+++ b/new-site/events/tahiti-tofino/index.html
@@ -93,25 +93,44 @@
         March 2017
       </p>
       <p class="info">
-        <span class="label">Guides:</span><br>
-        Tom Werney<br>
-        Emily Nathan<br>
+        <span class="label">Photographers:</span><br>
+        <a href="http://instagram.com/twheat" target="_blank">Tyson Wheatley</a><br>
+        <a href="http://instagram.com/dantom" target="_blank">Dan Tom</a><br>
+        <a href="http://instagram.com/omjsk" target="_blank">Ja Soon Kim</a><br/>
+        <a href="#" target="_blank">Tasha Van Zandt</a><br/>
+        <a href="http://instagram.com/ernathan" target="_blank">Emily Nathan</a><br/>
+
         Laura Rubin<br>
-        <span class="label"><a href="http://earthmissions.com/product/taq-allswell-tahiti/">Book this trip</a></span>
+
       </p>
     </div>
     <div class="main-content">
       <p>The islands, deep in the Pacific, offer tropical landscapes, a reef accessibly in minutes, world class surf and surf photography, wildlife filled turquoise lagoons, and the warmest Tahitian hospitality.</p>
-      <h3>La Orana</h3>
-      <p>From March 20-26 Tiny Atlas Quarterly and our trip partners Earth Missions (http://earthmissions.com) x AllSwell Creative (https://allswellcreative.com) hosted an epic island-hopping adventure on Mo’orea and Tahiti in collaboration with Adobe Stock (https://stock.adobe.com) who collaborated with Tiny Atlas and the photographers below to produce best-in-class photography.</p>
-      <h3>Itinerary</h3>
+      <h4>La Orana</h4>
+      <p>From March 20-26 Tiny Atlas Quarterly and our trip partners <a href="http://earthmissions.com" target="_blank">Earth Missions</a> x <a href="https://allswellcreative.com" target="_blank">AllSwell Creative</a> hosted an epic island-hopping adventure on Mo’orea and Tahiti in collaboration with <a href="https://stock.adobe.com" target="_blank">Adobe Stock</a> who collaborated with Tiny Atlas and the photographers below to produce best-in-class photography.</p>
+      <h4>Itinerary</h4>
       <p>After landing in Pape’ete, we traveled by ferry to the island of Mo'orea, staying right on the lagoon in over-water bungalows. Days in Mo’orea were measured in sunrises, mountainous photo hikes, fresh cooked family meals, drone flights, boat rides, sting rays swims and lemon shark underwater encounters. Departing Mo’orea we travelled to Tahiti, staying just past  “the end of the road” in Teahupo’o in local homes and bungalows accessible only by driving a pickup truck through a river or via a foot bridge and across a lush local neighborhood. In Teahupo’o our crew experienced this gorgeous land mostly from the water via daily boat adventures with our local guide Milton: capturing pro surfers on one of the most epic waves in the world, swimming in the rain in waterfall fed fresh rivers and while sailing out to remote Tetiaroa atoll.</p>
 
-      <h3>Creative Exploration</h3>
+      <h4>Trip Highlights</h4>
+      <ul>
+        <li>Catamaran adventure with <a href="https://www.facebook.com/poesailing/">Poe Charter</a> to Tetiaroa – and visiting the avian preserve atoll Tahuna Iti</li>
+        <li>Shooting pro surfers on the world-class wave in Teahupo’o</li>
+        <li>Lifestyle shoot with 3 models, @hinateaboo, @almaferrim, @thibaud_tauru</li>
+        <li><a href="#">@AllSwellCreative</a> writing workshop</li>
+        <li>Fuji Instax photography workshop</li>
+        <li>Sunrise mountaintop shoot on mount Rotui</li>
+        <li>Stock photography roundtable creative review under palm trees on a tropical lawn with CEO of <a href="http://www.cavanimages.com">Cavan Images</a> Peter Hannert</li>
+        <li><a href="http://instagram.com/cookwilltravel" target="_blank">Chef Mychael Henry's</a> island style delicious meals.</li>
+      </ul>
+
+      <h4>Creative Exploration</h4>
       <p>Throughout the trip our group of photographers/influencers explored Adobe Stock’s portfolio of tools (@adobestock, @adobecreativecloud) that helps emerging photographers connect their work with a larger audience. At Tiny Atlas we hear so often from photographers that they are shooting amazing work and trying to figure out how to translate that into client relationships, i.e. getting paid for their creativity. Becoming an Adobe Stock contributor represents one opportunity to do just that.</p>
 
-      <h3>Imagery</h3>
-      <p>The Tiny Atlas Tahiti collection (link TK) for Adobe Premium Stock  features the incredible results from our adventure.</p>
+      <h4>Imagery</h4>
+      <p>The <a href="#">Tiny Atlas Tahiti collection</a> for Adobe Premium Stock  features the incredible results from our adventure.</p>
+
+      <h4>Big Thanks to:</h4>
+      <p> <a href="https://www.instagram.com/fujifilm_instax_northamerica/?hl=en">Fuji Instax</a> who supplied Instax film and cameras for creative exploration. Borrow Lenses, who supplied technical gear for photographers to expand their skills.</p>
     </div>
   </div>
   <div id="tahiti-grid" class="grid-wrapper">
@@ -357,10 +376,6 @@
           </a>
       </div>
   </div>
-
-
-
-  <!-- <div id="nav-holder"><div id="nav"><a href="../../index.html"><img src="images/tiny-atlas-sm.jpg" alt="Tiny Atlas Quarterly"></a></div></div> -->
 
 </body>
 </html>
