--- a/new-site/events/tahiti-tofino/index.html
+++ b/new-site/events/tahiti-tofino/index.html
@@ -92,20 +92,20 @@
         <span class="label">Date:</span><br>
         March 2017
       </p>
-      <p class="info">
+      <p class="info no-b-m" >
         <span class="label">Photographers:</span><br>
-        <a href="http://instagram.com/twheat" target="_blank">Tyson Wheatley</a><br>
-        <a href="http://instagram.com/dantom" target="_blank">Dan Tom</a><br>
-        <a href="http://instagram.com/omjsk" target="_blank">Ja Soon Kim</a><br/>
-        <a href="#" target="_blank">Tasha Van Zandt</a><br/>
-        <a href="http://instagram.com/ernathan" target="_blank">Emily Nathan</a><br/>
-
-        Laura Rubin<br>
-
       </p>
+      <ul>
+        <li><a href="http://instagram.com/twheat" target="_blank">Tyson Wheatley</a></li>
+        <li><a href="http://instagram.com/dantom" target="_blank">Dan Tom</a></li>
+        <li><a href="http://instagram.com/omjsk" target="_blank">Ja Soon Kim</a></li>
+        <li><a href="http://instagram.com/tashavanzandt" target="_blank">Tasha Van Zandt</a></li>
+        <li><a href="http://instagram.com/ernathan" target="_blank">Emily Nathan</a></li>
+        <li><a href="http://instagram.com/saltywings" target="_blank">Jampal and Michael from @saltywings</a></li>
+      </ul>
     </div>
     <div class="main-content">
-      <p>The islands, deep in the Pacific, offer tropical landscapes, a reef accessibly in minutes, world class surf and surf photography, wildlife filled turquoise lagoons, and the warmest Tahitian hospitality.</p>
+      <p>The islands, deep in the Pacific, offer tropical landscapes, a reef accessible in minutes, world class surf and surf photography, turquoise lagoons brimming with marine life, and the warmest Tahitian hospitality.</p>
       <h4>La Orana</h4>
       <p>From March 20-26 Tiny Atlas Quarterly and our trip partners <a href="http://earthmissions.com" target="_blank">Earth Missions</a> x <a href="https://allswellcreative.com" target="_blank">AllSwell Creative</a> hosted an epic island-hopping adventure on Mo’orea and Tahiti in collaboration with <a href="https://stock.adobe.com" target="_blank">Adobe Stock</a> who collaborated with Tiny Atlas and the photographers below to produce best-in-class photography.</p>
       <h4>Itinerary</h4>
@@ -130,7 +130,28 @@
       <p>The <a href="#">Tiny Atlas Tahiti collection</a> for Adobe Premium Stock  features the incredible results from our adventure.</p>
 
       <h4>Big Thanks to:</h4>
-      <p> <a href="https://www.instagram.com/fujifilm_instax_northamerica/?hl=en">Fuji Instax</a> who supplied Instax film and cameras for creative exploration. Borrow Lenses, who supplied technical gear for photographers to expand their skills.</p>
+      <p> <a href="https://www.instagram.com/fujifilm_instax_northamerica/?hl=en" target="_blank">Fuji Instax</a> who supplied Instax film and cameras for creative exploration.<br/>
+      <a href="https://www.borrowlenses.com/" target="_blank">Borrow Lenses</a>, who supplied technical gear for photographers to expand their skills.</p>
+      <div class="half">
+        <ul>
+          <li><a href="https://velvet-tees.com" target="_blank">Velvet by Graham and Spencer</a></li>
+          <li><a href="http://www.saltoptics.com" target="_blank">SALT.</a></li>
+          <li><a href="https://www.nomadix.co" target="_blank">Nomadix</a></li>
+          <li><a href="http://www.eirnyc.com" target="_blank">EIR Skincare</a></li>
+          <li><a href="https://www.manduka.com" target="_blank">Manduka</a></li>
+          <li><a href="https://www.alitedesigns.com/collections/californiamade/products/tiny-atlas-solas-camera-bag" target="_blank">Alite Designs</a></li>
+        </ul>
+      </div>
+      <div class="half">
+        <ul>
+
+          <li><a href="https://twonewyork.com" target="_blank">Two New York</a></li>
+          <li><a href="https://www.bitplayinc.com" target="_blank">Bitplay SNAP!7</a></li>
+          <li><a href="http://www3.hilton.com/en/hotels/french-polynesia/hilton-moorea-lagoon-resort-and-spa-PPTMLHI/accommodations/index.html" target="_blank">Hilton Mo’Orea Lagoon Resort and Spa</a></li>
+          <li><a href="http://doendoen.com" target="_blank">Doen</a></li>
+          <li><a href="http://www.westerlindoutdoor.com" target="_blank">Westerlind</a></li>
+        </ul>
+      </div>
     </div>
   </div>
   <div id="tahiti-grid" class="grid-wrapper">
