--- a/new-site/events/tahiti-tofino/index.html
+++ b/new-site/events/tahiti-tofino/index.html
@@ -69,7 +69,7 @@
                   </ul>
                 </span>
 
-                <span class="header-links"><a href="https://www.alitedesigns.com/" target="_blank">Shop</a></span>
+                <span class="header-links"><a href="https://alitedesigns.com/collections/californiamade" target="_blank">Shop</a></span>
             </div>
         </div>
 
