--- a/new-site/events/tahiti-tofino/index.html
+++ b/new-site/events/tahiti-tofino/index.html
@@ -75,11 +75,9 @@
 
 <div class="lead-in">
 <h1>Tiny Atlas Trips</h1>
-<p>For years Tiny Atlas Quarterly has traveled with you virtually. Now, we want to take you on an incredible adventure. We have planned two stories, just like in our magazine shoots, but this time we are inviting our community to come along for the journey.</p>
-<p>
-  All guests will also be able to enter their work for consideration in our magazine’s forthcoming winter issue, REMOTE and on our <a href="https://instagram.com/tinyatlasquarterly" target="_blank">@tinyatlasquarterly</a> Instagram feed.
-</p>
-<p>Tiny Atlas Quarterly magazine has partnered with <a href="http://earthmissions.com/product/coastal-adventure-on-vancouver-island-british-columbia-with-allswell-and-tiny-atlas-quarterly/">Earth Missions</a> (a seasoned adventure sports travel company) and <a href="http://allswellcreative.com">Allswell Creative</a> (a range of notebooks created to inspire creative expression) in planning two incredible adventures for you. Join us to experience a unique photography, surfing and outdoor adventure on the islands of Tahiti and Mo'orea or Vancouver Island in British Columbia. Tiny Atlas Quarterly founder, Emily Nathan will be on hand to help you create and share your photographic story from the trip. </p>
+<p>For years Tiny Atlas Quarterly has traveled with you virtually. Now, we are taking our audience and photographers along for the trip. We plan magazine feature stories, just like in our magazine, but now we invite our community to come along for the journey to create and shoot alongside our team.</p>
+<p>For our first two trips travelers and photographers joined our team us to experience unique photography, surfing and nature drenched outdoor adventures in the islands of Tahiti and on Vancouver Island in British Columbia.</p>
+<p>Tiny Atlas Quarterly partnered with <a href="http://earthmissions.com/product/coastal-adventure-on-vancouver-island-british-columbia-with-allswell-and-tiny-atlas-quarterly/">Earth Missions</a> (a seasoned adventure sports travel company) and <a href="http://allswellcreative.com">Allswell Creative</a> (a range of notebooks created to inspire creative expression) in planning two incredible adventures. </p>
 
   </div>
 
@@ -109,7 +107,7 @@
       <h4>La Orana</h4>
       <p>From March 20-26 Tiny Atlas Quarterly and our trip partners <a href="http://earthmissions.com" target="_blank">Earth Missions</a> x <a href="https://allswellcreative.com" target="_blank">AllSwell Creative</a> hosted an epic island-hopping adventure on Mo’orea and Tahiti in collaboration with <a href="https://stock.adobe.com" target="_blank">Adobe Stock</a> who collaborated with Tiny Atlas and the photographers below to produce best-in-class photography.</p>
       <h4>Itinerary</h4>
-      <p>After landing in Pape’ete, we traveled by ferry to the island of Mo'orea, staying right on the lagoon in over-water bungalows. Days in Mo’orea were measured in sunrises, mountainous photo hikes, fresh cooked family meals, drone flights, boat rides, sting rays swims and lemon shark underwater encounters. Departing Mo’orea we travelled to Tahiti, staying just past  “the end of the road” in Teahupo’o in local homes and bungalows accessible only by driving a pickup truck through a river or via a foot bridge and across a lush local neighborhood. In Teahupo’o our crew experienced this gorgeous land mostly from the water via daily boat adventures with our local guide Milton: capturing pro surfers on one of the most epic waves in the world, swimming in the rain in waterfall fed fresh rivers and while sailing out to remote Tetiaroa atoll.</p>
+      <p>After landing in Pape’ete, we traveled by ferry to the island of Mo'orea, staying right on the lagoon in over-water bungalows. Days in Mo’orea were measured in sunrises, mountain photo hikes, fresh cooked family meals, drone flights, boat rides, sting rays swims and lemon shark underwater encounters. Departing Mo’orea we travelled to Tahiti, staying just past  “the end of the road” in Teahupo’o in local homes and bungalows accessible only by driving a pickup truck through a river or via a foot bridge and across a lush local neighborhood. In Teahupo’o our crew experienced this gorgeous land mostly from the water via daily boat adventures with our local guide Milton: capturing pro surfers on one of the most epic waves in the world, swimming in the rain in waterfall fed fresh rivers and while sailing out to remote Tetiaroa atoll.</p>
 
       <h4>Trip Highlights</h4>
       <ul>
@@ -127,7 +125,7 @@
       <p>Throughout the trip our group of photographers/influencers explored Adobe Stock’s portfolio of tools (@adobestock, @adobecreativecloud) that helps emerging photographers connect their work with a larger audience. At Tiny Atlas we hear so often from photographers that they are shooting amazing work and trying to figure out how to translate that into client relationships, i.e. getting paid for their creativity. Becoming an Adobe Stock contributor represents one opportunity to do just that.</p>
 
       <h4>Imagery</h4>
-      <p>The <a href="#">Tiny Atlas Tahiti collection</a> for Adobe Premium Stock  features the incredible results from our adventure.</p>
+      <p>The <a href="https://adobe.ly/2oo762k" target="_blank">Tiny Atlas Tahiti collection</a> for Adobe Premium Stock features the incredible results from our trip.</p>
 
       <h4>Big Thanks to:</h4>
       <p> <a href="https://www.instagram.com/fujifilm_instax_northamerica/?hl=en" target="_blank">Fuji Instax</a> who supplied Instax film and cameras for creative exploration.<br/>
